--- a/blocks/page.css
+++ b/blocks/page.css
@@ -3,9 +3,8 @@
   color: hsl(0, 0%, 100%);
   /*min-width: 769px;
   max-width: 1280px;*/
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 24px;
   line-height: 1.5;
-  font-style: normal;
   padding: 30px;
 }
