--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -21,3 +21,39 @@
 .intro__text-footer {
   font-size: 16px;
 }
+
+@media screen and (max-width: 768px) {
+  .intro {
+    width: 100vw;
+    margin: 0px auto 64px;
+  }
+  .intro__text {
+    width: calc(100vw - 48px);
+    font-size: 24px;
+    line-height: 34px;
+    margin: 32px auto;
+  }
+  .intro__text-title {
+    font-size: 45px;
+    line-height: 49px;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    width: 100vw;
+    margin: 0 auto 64px;
+  }
+  .intro__text {
+    width: calc(100vw - 32px);
+    font-size: 24px;
+    line-height: 30px;
+    margin: 32px auto;
+  }
+
+  .intro__text-title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
