--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,18 @@
 .page {
-  background-color: #2a2c2f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   color: hsl(0, 0%, 100%);
   /*min-width: 769px;
   max-width: 1280px;*/
   font-family: "Inter", sans-serif;
   font-size: 24px;
   line-height: 1.5;
-  padding: 30px;
+  padding: 30px 0px;
+}
+
+body {
+  background-color: #2a2c2f;
 }
