--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,18 +1,16 @@
 .page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  color: hsl(0, 0%, 100%);
-  /*min-width: 769px;
-  max-width: 1280px;*/
-  font-family: "Inter", sans-serif;
-  font-size: 24px;
-  line-height: 1.5;
-  padding: 30px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    line-height: 1.5;
+    margin: 0 auto;
+    padding: 30px 0px;
 }
 
 body {
-  background-color: #2a2c2f;
+    background-color: #2a2c2f;
 }
