--- a/blocks/content.css
+++ b/blocks/content.css
@@ -10,7 +10,7 @@
 .content__text-title {
     font-weight: bold;
     font-size: 54px;
-    line-height: 58px;
+    line-height: 1.15;
     text-align: left;
     margin-top: 0px;
 }
@@ -30,12 +30,12 @@
     .content__text {
         width: calc(100vw - 48px);
         font-size: 24px;
-        line-height: 34px;
+        line-height: 1.5;
         margin: 32px auto;
     }
     .content__text-title {
         font-size: 45px;
-        line-height: 49px;
+        line-height: 1.5;
         margin-bottom: 50px;
     }
 }
@@ -48,12 +48,12 @@
     .content__text {
         width: calc(100vw - 32px);
         font-size: 24px;
-        line-height: 30px;
+        line-height: 1.5;
         margin: 32px auto;
     }
 
     .content__text-title {
         font-size: 32px;
-        line-height: 35px;
+        line-height: 1.5;
     }
 }
