--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -21,3 +21,22 @@
     max-height: 100%;
     object-fit: cover;
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        margin: 0px 25px 0px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: 16px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .container {
+        margin: 0px 10px 0px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        gap: 16px;
+    }
+}
