--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,7 +1,5 @@
 .place {
-    height: 1000px;
-    width: 984px;
-
+    max-width: calc(100vw - 25%);
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 2fr 4fr 1fr;
@@ -9,6 +7,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     grid-gap: 40px;
+    margin: 0 auto;
+    min-height: 0; /* NEW */
+    min-width: 0;
 }
 .place__item {
     -webkit-box-sizing: border-box;
@@ -29,7 +30,7 @@
 }
 .place__title {
     font-weight: bold;
-    font-size: 96px;
+    font-size: 72px;
     line-height: 1.15;
     margin: 0px;
 }
@@ -63,14 +64,15 @@
 
 .place__item:nth-child(4) {
     grid-row: span 2;
-    margin-top: 0px;
+    margin: 0px 0px 30px;
 }
 
 .place__button {
     background-image: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
-    padding: 13px 20px;
+    padding: 10px 20px;
     box-shadow: 5px 5px 10px #00000040;
     border-style: none;
+    border-radius: 4px;
 }
 .place__button-link {
     list-style: none;
@@ -84,4 +86,59 @@
 
 .place__button:hover {
     opacity: 40%;
+}
+
+@media screen and (max-width: 768px) {
+    .place {
+        max-width: calc(100vw - 10%);
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 0.5fr 2fr 1fr;
+        padding-right: 5%;
+    }
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 1.5;
+        margin-top: 0px;
+    }
+    .place__title {
+        font-size: 42px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .place {
+        max-width: 100vw;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 0.2fr 1fr 1fr 1fr 0.5fr;
+        grid-gap: 30px;
+    }
+    .place__paragraph {
+        margin: 0px auto;
+        max-width: calc(100vw - 10%);
+        font-size: 16px;
+        line-height: 1.5;
+        margin-top: 0px;
+    }
+
+    .place__title {
+        font-size: 32px;
+        padding: 5%;
+    }
+    .place__website {
+        padding: 0px 5%;
+        margin: 0px;
+    }
+    .place__button {
+        padding: 5%;
+        max-width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+    }
+    .place__url-heading {
+        margin: 0px;
+    }
+    .place__artist {
+        margin: 0px;
+    }
 }
