--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -1,21 +1,21 @@
 .photo-grid {
     margin: 100px auto;
 }
-.container {
+.photo-grid__container {
     margin: 0px 50px 0px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 16px;
 }
-.gallery__item {
+.photo-grid__item {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
 }
 
-.gallery__image {
+.photo-grid__image {
     width: 100%;
     min-height: 100%;
     max-height: 100%;
@@ -23,7 +23,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .container {
+    .photo-grid__container {
         margin: 0px 25px 0px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -32,7 +32,7 @@
     }
 }
 @media screen and (max-width: 320px) {
-    .container {
+    .photo-grid__container {
         margin: 0px 10px 0px;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
