--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,4 +1,4 @@
-.place {
+.places__container {
     max-width: calc(100vw - 25%);
     display: grid;
     grid-template-columns: 50% 50%;
@@ -11,36 +11,36 @@
     min-height: 0; /* NEW */
     min-width: 0;
 }
-.place__item {
+.places__item {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
 }
 
-.place__image {
+.places__image {
     width: 100%;
     min-height: 100%;
     max-height: 100%;
     object-fit: cover;
     box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
 }
-.place__image:hover {
+.places__image:hover {
     opacity: 50%;
 }
-.place__title {
+.places__title {
     font-weight: bold;
     font-size: 72px;
     line-height: 1.15;
     margin: 0px;
 }
-.place__url-heading {
+.places__url-heading {
     font-size: 12px;
     line-height: 1.15;
     text-transform: uppercase;
     color: #aaaaaa;
 }
-.place__artist {
+.places__artist {
     font-size: 18px;
     line-height: 1.5;
     color: #ffffff;
@@ -48,33 +48,34 @@
     margin: 10px 0px 0px;
 }
 
-.place__paragraph {
+.places__paragraph {
     font-size: 18px;
     line-height: 1.5;
     margin-top: 0px;
 }
-.place__item:nth-child(1) {
+.places__item:nth-child(1) {
     display: flex;
     align-items: flex-end;
 }
-.place__item:nth-child(2) {
+.places__item:nth-child(2) {
     display: flex;
     align-items: flex-end;
 }
 
-.place__item:nth-child(4) {
+.places__item:nth-child(4) {
     grid-row: span 2;
     margin: 0px 0px 30px;
 }
 
-.place__button {
+.places__button {
     background-image: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+    width: max-content;
     padding: 10px 20px;
     box-shadow: 5px 5px 10px #00000040;
     border-style: none;
     border-radius: 4px;
 }
-.place__button-link {
+.places__button-link {
     list-style: none;
     text-decoration: none;
     color: #fff;
@@ -84,30 +85,29 @@
     text-align: center;
 }
 
-.place__button:hover {
+.places__button:hover {
     opacity: 40%;
 }
 
 @media screen and (max-width: 768px) {
-    .place {
+    .places__container {
         max-width: calc(100vw - 5%);
         grid-template-columns: 50% 50%;
         grid-template-rows: 0.5fr 2fr 1fr;
         padding-right: 5%;
         margin: 50px auto;
     }
-    .place__paragraph {
+    .places__paragraph {
         font-size: 16px;
         line-height: 1.5;
         margin-top: 0px;
     }
-    .place__title {
+    .places__title {
         font-size: 42px;
     }
 }
-
-@media screen and (max-width: 320px) {
-    .place {
+@media screen and (max-width: 570px) {
+    .places__container {
         max-width: 100vw;
         grid-template-columns: 1fr;
         grid-template-rows: max-content;
@@ -115,37 +115,82 @@
         margin: 50px auto;
         padding: 0px;
     }
-    .place__paragraph {
+    .places__paragraph {
         padding: 0px 2.5%;
         font-size: 16px;
         line-height: 1.5;
     }
-    .place__website {
+    .places__website {
         padding: 0px 2.5%;
     }
 
-    .place__title {
+    .places__title {
         padding: 0px 2.5%;
         font-size: 32px;
     }
 
-    .place__button {
-        width: calc(100vw - 5%);
+    .places__button {
+        width: max-content;
+        padding: 5% 15%;
+        margin: 0px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .places__button-link {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .places__image {
+        max-width: 100vw;
+        min-width: 0px;
+    }
+    .places__item:nth-child(4) {
+        margin: 0px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places__container {
+        max-width: 100vw;
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content;
+        gap: 30px;
+        margin: 50px auto;
+        padding: 0px;
+    }
+    .places__paragraph {
+        padding: 0px 2.5%;
+        font-size: 16px;
+        line-height: 1.5;
+    }
+    .places__website {
+        padding: 0px 2.5%;
+    }
+
+    .places__title {
+        padding: 0px 2.5%;
+        font-size: 32px;
+    }
+
+    .places__button {
+        width: max-content;
         margin: 0px auto;
         display: flex;
         padding: 5% 15%;
         align-items: center;
     }
-    .place__button-link {
+    .places__button-link {
         font-size: 14px;
         text-align: center;
     }
 
-    .place__image {
+    .places__image {
         max-width: 100vw;
         min-width: 0px;
     }
-    .place__item:nth-child(4) {
+    .places__item:nth-child(4) {
         margin: 0px;
     }
 }
