--- a/blocks/places.css
+++ b/blocks/places.css
@@ -86,7 +86,7 @@
 }
 
 .places__button:hover {
-    opacity: 40%;
+    background-image: (90deg, #0278fe40 0%, #003a7b40 99.98%);
 }
 
 @media screen and (max-width: 768px) {
