--- a/blocks/places.css
+++ b/blocks/places.css
@@ -69,6 +69,7 @@
 
 .places__button {
     background-image: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+
     width: max-content;
     padding: 10px 20px;
     box-shadow: 5px 5px 10px #00000040;
@@ -86,7 +87,8 @@
 }
 
 .places__button:hover {
-    background-image: (90deg, #0278fe40 0%, #003a7b40 99.98%);
+    background-image: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
+    opacity: 40%;
 }
 
 @media screen and (max-width: 768px) {
