--- a/blocks/places.css
+++ b/blocks/places.css
@@ -68,7 +68,7 @@
 }
 
 .places__button {
-    background-image: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
+    background: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
     width: max-content;
     padding: 10px 20px;
     box-shadow: 5px 5px 10px #00000040;
@@ -86,8 +86,7 @@
 }
 
 .places__button:hover {
-    background-image: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
-    opacity: 40%;
+    background: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
 }
 
 @media screen and (max-width: 768px) {
