--- a/blocks/places.css
+++ b/blocks/places.css
@@ -68,7 +68,7 @@
 }
 
 .places__button {
-    background: linear-gradient(90deg, #0278fe 0%, #00397b 99.98%);
+    background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
     width: max-content;
     padding: 10px 20px;
     box-shadow: 5px 5px 10px #00000040;
